# Di-San-Viet-Nam

./: .env.example  .gitignore  README.md
.github/workflows/: cloud-run-agent.yml  cloud-run.yml  cloudflare-pages.yml
agent/: Dockerfile  pyproject.toml
agent/app/: cli_guide.py  config.py  main.py
agent/app/prompts/: age_adults.md  age_kids.md  age_teens.md  artifact_story.md  guide_chat.md  landmark_story.md
agent/app/routes/: annotation.py  chat.py  health.py  story.py  voice.py
agent/app/schemas/: ai.py
agent/app/services/: annotation_narration_service.py  fallback_service.py  guide_service.py  llm_service.py  prompt_service.py  voice_providers.py  voice_service.py
agent/app/tools/: __init__.py  local_data.py  wiki_search.py
agent/data/: lang_tu_duc.md  sac_menh_chi_bao.md
agent/tests/: test_annotation_narration_service.py
backend/: Dockerfile  package-lock.json  package.json
backend/src/: app.ts  server.ts
backend/src/config/: env.ts
backend/src/data/: artifacts.json  graphs.json  landmarks.json  timelines.json
backend/src/repositories/: mock.repository.ts
backend/src/routes/: annotation.routes.ts  chat.routes.ts  content.routes.ts  health.routes.ts  model.routes.ts  share.routes.ts  story.routes.ts  voice.routes.ts
backend/src/types/: index.ts
docs/: INFRASTRUCTURE.md  PRODUCT_OVERVIEW.md  REQUIREMENTS.md  SRS.md  SYSTEM_ARCHITECTURE.md  TAILIEU.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
infra/: README.md
infra/dev/: docker-compose.yml
(+36 files in other folders)
