[project]
name = "viet-heritage-agent"
version = "0.1.0"
description = "FastAPI AI agent for Vietnam heritage storytelling"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.1",
  "openai>=1.57.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.20"
]

[tool.setuptools]
packages = ["app"]
